--- a/learning-spring-boot-thymeleaf/src/main/resources/templates/greeting.html
+++ b/learning-spring-boot-thymeleaf/src/main/resources/templates/greeting.html
@@ -5,6 +5,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-    <p th:text="'I Hello, ' + ${name} + '!'" />
+    <p th:text="'Hello, ' + ${name} + '!'" />
 </body>
 </html>
